--- a/Partie_2.Rmd
+++ b/Partie_2.Rmd
@@ -50,7 +50,7 @@ $\small{F() = 0.0512 + 0.0176*te}$ avec un maximun de F() = 0.5.
 | Paramètre | Valeur | Définition |
 |:--:|:----:|:--------------|
 | s | 0.49 | Taux de croissance du parrofish par année |
-| r | 1 |  Taux pour lequel le corail remplace le gazon d'algue par année (Taux de coissance du corail) |
+| r | 1 |  Taux pour lequel le corail remplace le gazon d'algue par année |
 | a | 0.1 | Taux pour lequel les macroalgues remplace le corail par année |
 | gamma | 1.6,0.8 | Taux pour lequel les macroalgues remplace le gazon d'algue par année |
 | d | 0.44 | Taux de mortalité du corail par année |
