--- a/Partie_2.Rmd
+++ b/Partie_2.Rmd
@@ -20,21 +20,22 @@ Pour lutter contre la dégradation des récifs coralliens, il est crucial d'agir
 
 Ils abordent premièrement la compétition de l'espace entre les macroalgues et les coraux. Deuxièmement, ils ajoutent au modèle la relation consommateur-ressource entre les poissons-perroquets et les macroalgues. En troisième lieu, la rugosité des coraux est également considérée comme un élément crucial pour la capacité de soutien des populations de poisson-perroquets, tandis que l'effort de pêche joue un rôle important sur la population de poisson-perroquets. Enfin, le modèle inclut un élément stochastique représenté par les ouragans, qui ont un impact sur les populations de coraux, de macroalgues et sur la rugosité des coraux. 
 
-Dans notre étude, nous avons cherché à rendre ce modèle plus réaliste en y ajoutant une composante plus variable et aléatoire simulant de manière plus précise l'impact réel des ouragans. De plus, nous avons intégré une augmentation de l'intensité des ouragans au fil des années, ce qui reflète la situation actuelle avec les changements climatiques (@hernandez-delgadostronger2024)..
+Dans notre étude, nous avons cherché à rendre ce modèle plus réaliste en y ajoutant une composante plus variable et aléatoire simulant de manière plus précise l'impact réel des ouragans. De plus, nous avons intégré une augmentation de l'intensité des ouragans au fil des années, ce qui reflète la situation actuelle avec les changements climatiques (@hernandez-delgado_stronger_2024).
 
 ## Méthode
 Dans ce modèle, nous avons concentré nos efforts sur F() et G() ainsi qu'un nouveau paramètre i qui caractérise la farce de l'impact. 
 
 Notre objectif est d'améliorer ce modèle : 
 
-Modèle avec implémentation d'ouragans stochastique:  
-$\small{dC = g_C(C,M,P,R,t)dt - C(F() + \sigma \epsilon)idq}$  
-$\small{dM = g_M(C,M,P,R,t)dt - Mm_Hidq}$  
+Modèle avec implémentation d'ouragans stochastique :  
+$\small{dC = g_C(C,M,P,R,t)dt - C(F() + \sigma \epsilon)dq}$  
+$\small{dM = g_M(C,M,P,R,t)dt - Mm_Hdq}$  
 $\small{dP = g_P(C,M,P,R,t)dt}$  
-$\small{dR = g_R(C,M,P,R,t)dt - (R-1)(G() + \sigma \epsilon)idq}$  
+$\small{dR = g_R(C,M,P,R,t)dt - (R-1)(G() + \sigma \epsilon)dq}$  
 $\small{dY = 1 - M - C}$  
 
 $\small{F() = 0.0512 + 0.0176*te}$ avec un maximum de F() = 0.5.
+$\small{G() =}$ soit 0.5 pour un impact élever, soit F() pour un impact moyen et soit 0.05 pour un impact faible.
 
 $\small{g_C(C,M,P,R,t) = rTC - dC - aMC}$   
 $\small{g_M(C,M,P,R,t) = aMC} - \frac{\alpha \frac{P}{\beta}M}{M + Y} - \small{\gamma MY}$  
@@ -60,8 +61,8 @@ $\small{K(M+T,R) = }\frac{(c1R + c2)}{K_{max}}\frac{\delta(M+Y)}{1 + v(M+Y)}$
 | hG | 0.03 | Rétablissement de la complexité du corail par année |
 | hE | 0.01 | Érosion de la complexité du corail par année |
 | kmax | 17.745 | Limite supérieure d'abondance des poissons-perroquets |
-| F() | 0.0512 + 0.0176*te | La proportion de la couverture corallienne maximum affectée par un ouragan respectivement |
-| G() |  | La proportion attendue de rugosités affectée au maximum par les impacts des ouragans respectivement |
+| F() | $0.0512 + 0.0176*te$ | La proportion de la couverture corallienne maximum affectée par un ouragan respectivement |
+| G() | $0.1\times (R-1)$ | La proportion attendue de rugosités affectée au maximum par les impacts des ouragans respectivement |
 | mH | 0.8 | Taux de mortalité des macroalgues maximum à la suite d'un ouragan |
 | te | variable | Temps écouler depuis le dernier ouragan en année |
 | sigma | 0.05 | Écart maximal de la variabilité des impacts des ouragans d'epsilon |
@@ -110,12 +111,13 @@ Le $F$ est déterminé par l'équation suivante: $F(t_e)=0.$
 
 Pour le modèle que nous proposons, la première modification apportée est que nous fixons un coefficient d'impact $i$ pour la simulation qui agit sur le dommage subi par chaque composante. Ainsi ce coefficient d'impact d'une valeur variant entre 0 et 1 dicte le dommage subi par les différents éléments de la simulation. Nous ajustons l'étendue possible de $dC$, $dM$ et $dR$ afin que la variabilité des dommages entre un coefficient d'impact à 1 et un coefficient d'impact à 0 corresponde aux limites de ce qui est observé par le document de @perez-cervantes_coral_2020. Ainsi, la perte de couvert de corail est également proportionnelle à $F$, mais est bornée à 0% quand $i\in [0,0.3]$, correspondant à un ouragan de trop faible intensité pour réduire le couvert coralliens, et varie linéairement entre 0% et 75% quand $i\in[0.3,1]$. Pour le couvert de macroalgues, le dommage subi reste en moyenne le même, soit 80%, mais le coefficient d'impact ajoute une variabilité de 25% qui fait en sorte que le dommage varie proportionnellement entre 60% et 100% selon la valeur de $I$. Cette modification pallie partiellement le fait qu'en situation d'ouragan plutôt faible, les macroalgues sont désavantagées par rapport au corail. Pour la rugosité, la littérature semblait démontrer que la proportion de rugosité perdue était proportionnelle à la valeur de rugosité elle-même, nous avons donc ajouté la composante $G=0.1\times (R-1)$ ainsi qu'une relation avec $i$ faisant ainsi varier $dR$ entre 0 et 50% selon $R$ et $i$, mais seulement limité entre 0% et 5% si $i=0$. 
 
-Une autre modification que nous avons apportée au modèle est une forme d'accélération du rythme auquel la valeur de F augmente. Avec les années qui passent, nous supposons que les dégâts des ouragans deviendront plus graves plus rapidement en fonction du temps écoulé depuis le dernier ouragan, à cause des changements climatiques(@hernandez-delgadostronger2024). Ainsi, si au début de la simulation, il faut 25.5 années pour que F atteigne son maximum à 0.5, graduellement cette période sera raccourcie pour être de seulement 17 années à la fin. Les équations déterminant le dommage à chaque composante du système lors d'un ouragan sont donc définies par les équations suivantes:
+Une autre modification que nous avons apportée au modèle est une forme d'accélération du rythme auquel la valeur de F augmente. Avec les années qui passent, nous supposons que les dégâts des ouragans deviendront plus graves plus rapidement en fonction du temps écoulé depuis le dernier ouragan, à cause des changements climatiques (@hernandez-delgado_stronger_2024). Ainsi, si au début de la simulation, il faut 25.5 années pour que F atteigne son maximum à 0.5, graduellement cette période sera raccourcie pour être de seulement 17 années à la fin. Les équations déterminant le dommage à chaque composante du système lors d'un ouragan sont donc définies par les équations suivantes:
 
-+ $dC=-C\times (F+ \sigma \epsilon)\times (2\times i-0.5)$ où on pose que si $dC<0$, alors $dC=0$
++ $dC=-C\times (F(t_e,t)+ \sigma \epsilon)\times (2\times i-0.5)$ où on pose que si $dC<0$, alors $dC=0$
 + $dM=-M\times m_H\times(0.5\times i+0.75)$
-+ $dR=-(R-1)\times(G + \sigma\epsilon)\times(2.25\times i+0.25)$ où $G=0.1\times (R-1)$
-+ $F(t_e)=0.0512+0.0176\times t_e\times(1+t/200)$ où si $F(t_e)>0.5$ alors $F(t_e)=0.5$
++ $dR=-(R-1)\times(G() + \sigma\epsilon)\times(2.25\times i+0.25)$
++ $G()=0.1\times (R-1)$
++ $F(t_e,t)=0.0512+0.0176\times t_e\times(1+t/200)$ où si $F(t_e)>0.5$ alors $F(t_e)=0.5$
 
 Tout comme dans le modèle de @blackwood_model-based_2011, l'évènement d'un ouragan est déterminé par un tirage aléatoire dans une distribution de poisson à moyenne $\lambda$, ce tirage offre donc une probabilité $\lambda \times dt$ qu'un ouragan arrive (si le résultat du tirage est >0) pour chaque pas de temps.
  
@@ -233,7 +235,7 @@ corailstochastiquev2 <- function (R0,f,lambda=1/30,impact=0.5,dt=1,graph=FALSE){
 Pour mieux comprendre comment répond la résilience du corail face à différentes combinaisons de force d'impact et de rugosité initiale, pour différents efforts de pêche, nous effectuons 10 simulations de 100 ans par combinaison de R et i, et ce pour les 3 différentes valeurs d'effort de pêche correspondant à un effort minime, modéré et élevé avec les valeurs suivantes: 0.1, 0.4 et 0.7. Ces valeurs sont tirées de nos propres observations dans les figures présentées par @blackwood_model-based_2011. Au bout de 100 ans, avec la paramétrisation utilisée, quand l'effort de pêche était aux alentours de 0.1, le corail se rétablissait très souvent. Quand l'effort de pêche était plus grand que 0.6, le corail finissait très souvent par s'effondrer au profit des macroalgues. La situation intermédiaire avec un effort de pêche à mi-chemin produisait différentes situations dépendamment de plusieurs facteurs. Nous avons donc considéré plus ou moins arbitrairement que 0.1, 0.4 et 0.7 représentaient respectivement un effort de pêche faible, moyen et fort.
 Les images générées ensuite représentent ainsi la moyenne et l'écart-type du résultat des 10 simulations. Nous faisons cela 2 fois, une fois avec le résultat en termes de couverture par le corail et une autre avec le résultat pour la rugosité après 100 ans. Pour toutes ces simulations, la fréquence moyenne estimée des ouragans est fixée à 1/15, correspondant à une fréquence intermédiaire d'un ouragan aux 15 ans, et le pas de temps est ajusté à 0.1 pour conférer une bonne résolution aux résultats tout en optimisant le temps nécessaire pour calculer chaque simulation.
 
-```{r,eval=FALSE}
+```{r}
 library(fields)
 #graphique de C en fonction de I et R
 graph.imageCIR <- function(fishing,freq,it=10,pas=0.1){
@@ -264,11 +266,11 @@ graph.imageCIR <- function(fishing,freq,it=10,pas=0.1){
   
   par(mfrow=c(1,2))
   image.plot(x = x_values, y = y_values, t(matC), col = viridis(20), zlim = c(0,0.56),
-             xlab = "impact", ylab = "Rugosité initiale", 
-             main=c("moyenne de C finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
+             xlab = "Impact", ylab = "Rugosité initiale", 
+             main=c("Moyenne de C finale",paste(c("fréq:1/",1/l,", effort de pêche:",f0),collapse = "")))
   image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
-             xlab = "impact", ylab = "Rugosité initiale",
-             main=c("écart-type de C finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
+             xlab = "Impact", ylab = "Rugosité initiale",
+             main=c("Écart-type de C finale",paste(c("fréq:1/",1/l,", effort de pêche:",f0),collapse = "")))
 }
 graph.imageCIR(fishing = 0.1, freq = 1/15, it=2, pas = 0.5)
 graph.imageCIR(fishing = 0.4, freq = 1/15, it=2, pas = 0.5)
@@ -277,7 +279,7 @@ graph.imageCIR(fishing = 0.7, freq = 1/15, it=2, pas = 0.5)
 
 Un premier élément à noter est qu'une tendance générale peut être observée dans le graphique présentant l'état du corail, indiquant que plus l'impact est élevé, plus la situation des coraux est instable. Cette observation s'observe aussi dans les graphiques qui représentent les écarts-types. D'ailleurs, on peut noter que l'étendue des écarts-types est large. Pour une même simulation, les écarts maximum peuvent aller jusqu'à 30%. D’autre part, il est intéressant de noter qu'avec un effort de pêche plus important, la rugosité minimale pour une résilience des coraux augmente. 
 
-```{r,eval=FALSE}
+```{r}
 #graphique de R finale en fonction de I et R
 graph.imageRIR <- function(fishing,freq,it=10,pas=0.1){
   
@@ -306,11 +308,11 @@ graph.imageRIR <- function(fishing,freq,it=10,pas=0.1){
   
   par(mfrow=c(1,2))
   image.plot(x = x_values, y = y_values, t(matC), col = viridis(20), zlim=c(1,3),
-             xlab = "impact", ylab = "Rugosité initiale", 
-             main=c("moyenne de R finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
+             xlab = "Impact", ylab = "Rugosité initiale", 
+             main=c("Moyenne de R finale",paste(c("fréq:1/",1/l,", effort de pêche:",f0),collapse = "")))
   image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
-             xlab = "impact", ylab = "Rugosité initiale",
-             main=c("écart-type de R finale",paste(c("fréq:1/",1/l,", fishing:",f0),collapse = "")))
+             xlab = "Impact", ylab = "Rugosité initiale",
+             main=c("Écart-type de R finale",paste(c("fréq:1/",1/l,", effort de pêche:",f0),collapse = "")))
 }
 graph.imageRIR(fishing = 0.1, freq = 1/15, it=2, pas = 0.5)
 graph.imageRIR(fishing = 0.4, freq = 1/15, it=2, pas = 0.5)
@@ -318,7 +320,7 @@ graph.imageRIR(fishing = 0.7, freq = 1/15, it=2, pas = 0.5)
 
 ```
 
-Un élément notable des graphiques présentant l'état de la rugosité après une simulation est qu'ils ont tendance a s'équilibrer vers une rugosité de 2. De plus, la tendance d'une diminution selon l'impact des ouragans reste présente dans l'état de la rugosité comme dans l'état du corail. 
+Un élément notable des graphiques présentant l'état de la rugosité est qu'ils ont tendance a s'équilibrer vers une rugosité de 2. De plus, la tendance d'une diminution selon l'impact des ouragans reste présente dans l'état de la rugosité comme dans l'état du corail. 
 
 ## Discussion 
 
@@ -330,7 +332,7 @@ Un deuxième élément intéressant est qu'avec un effort de pêche plus importa
 
 Un autre élément notable est que les trois simulations possèdent une large étendue d'écart-type, les écarts maximums allant jusqu'à 30% pour une même simulation. Une étendue large d'écart-type démontre une instabilité au niveau des populations avec les mêmes conditions de départ. Toutefois, il est possible d'attribuer cette divergence aux ouragans qui surviennent proche de la fin des simulations. Ainsi, dépendant quand l'ouragan survient et de la force de son impact, il y a beaucoup de scénarios possibles. Sinon, les autres zones d'instabilité sont des zones proches des limites de rugosité nécessaire pour la résilience de coraux. Ces zones peuvent avec un peu de chance être des situations favorable au corail ou défavorable avec moins de chance d'où l'instabilité. 
 
-Un dernier élément soulignés est la présence d'un état stable de la rugosité, commun aux trois niveaux d'effort de pêche, indépendamment de la rugosité initiale. Bien que les zones d'instabilité liées aux limites de rugosité nécessaires à la résilience des coraux persistent en fonction de l'abondance des poissons-perroquets, chaque situation présente le même état stable de rugosité. La meilleure explication de ce phénomène réside probablement dans notre formule d'impact des ouragans sur la rugosité. En effet, plus la rugosité est élevée, plus elle est susceptible d'être affectée, conduisant ainsi à l'établissement un maximum de rugosité moyenne. 
+Un dernier élément soulignés est la présence d'un état stable de la rugosité, commun aux trois niveaux d'effort de pêche, indépendamment de la rugosité initiale. Bien que les zones d'instabilité liées aux limites de rugosité nécessaires à la résilience des coraux persistent en fonction de l'abondance des poissons-perroquets, chaque situation présente le même état stable de rugosité. L'explication de ce phénomène repose sur la valeur de R à l'équilibre soit 2.58 dans une situation où le corail atteint l'équilibre (0.56). Ce qui est toutefois intéressant à noter, c'est qu'il n'y a pas d'effet perceptible selon la rugosité au-delà du seuil minimal. Selon notre formule, on aurait pu s'attendre à ce que les coraux plus complexes soient plus durement touchés, mais aucun effet notable n'est observé. Cela peut s'expliquer par la valeur d'équilibre de la rugosité. Cette fonction de dommage pourrait contribuer à l'atteindre, car il y a moins de dommages à mesure que la rugosité diminue. 
 
 Dans des recherches futures, il serait intéressant d'explorer d'autre stress qui pourrait avoir plus d'impact sur les dynamiques de population que les ouragans qui ont montré un effet notable ont des niveaux très élevés de pêche. 
 
