--- a/version-propre.Rmd
+++ b/version-propre.Rmd
@@ -13,7 +13,7 @@ output: html_document
 
 ### Question biologique : 
 
-Comment la résilience des récifs coralliens, soit la capacité à ne pas s'effondrer suite a un stresse ou une perturbation varie-t-elle selon l'effort de pêche, l'impact des ouragans et la rugosité initiale?
+Comment la résilience des récifs coralliens, soit la capacité à ne pas s'effondrer suite a un stress ou une perturbation varie-t-elle selon l'effort de pêche, l'impact des ouragans et la rugosité initiale?
 
 ### Hypothèse :
 
@@ -89,8 +89,8 @@ $\small{dP = g_P(C,M,P,R,t)dt}$
 $\small{dR = g_R(C,M,P,R,t)dt - (R-1)(G() + \sigma \epsilon)dq}$  
 $\small{dY = 1 - M - C}$  
 
-$\small{F() = 0.0512 + 0.0176*te}$ avec un maximum de F() = 0.5.
-G() est soit 0.5 pour un impact élever, F() pour un impact moyen et 0.05 pour un impact faible.
+$\small{F() = 0.0512 + 0.0176*te}$ avec un maximum de F() = 0.5.  
+$G()$ est soit 0.5 pour un impact élever, F() pour un impact moyen et 0.05 pour un impact faible.
 
 où $\small{g_C(C,M,P,R,t),g_M(C,M,P,R,t),g_P(C,M,P,R,t),g_R(C,M,P,R,t)}$ sont des fonctions qui represente le modèle avec avec un rugosité variable.  
 Et où q est un processus de saut de Poisson avec un taux de saut λ tel que dq = 0 avec une probabilité de 1 - λdt et dq = 1 avec une probabilité de λdt.  
@@ -113,7 +113,7 @@ Et où q est un processus de saut de Poisson avec un taux de saut λ tel que dq 
 
 ### Calcul :
 
-```{r}
+```{r, echo=F}
 # Chargement de librairie
 library(deSolve)
 library(fields)
@@ -168,7 +168,7 @@ coral <- matrix(data = NA, nrow = 41, ncol = 41)
 
 # Boucle sur fish 
 for (i in 1:41) {
-  fish <- (i - 1) * (1 / 40)  # Calcul de la valeur de fish
+  fish <- (i - 1) * (1 / 40)  # Calcul de la valeur d'éffort de pêche
   
   # Boucle sur rugosité
   for (j in 1:41) {
@@ -204,7 +204,7 @@ fish.vec <- data.frame()
 # Pour chaque rugosité calcule une situation favorable et défavorable au corail et la zone intermédiaire correspond a une zone d'instabilité entre les deux droite.
 for (j in seq(3,9,by=3)) {
   for (i in 1:50) {
-    fish <- (i - 1) * (1 / 50)  # Calcul de la valeur de fish
+    fish <- (i - 1) * (1 / 50)  # Calcul de la valeur d'éffort de pêche
     res <- dessinSol(ic = c(M = 0.2, C = 0.8, P = 0.75),
                       parms = c(a = 0.1, d = 0.44, r = 1, f = fish,
                                 s = 0.49, ca = -3.21, cb = 3.65, kmax = 17.745,
@@ -461,7 +461,7 @@ colnames(coral) <- col_names
 
 # Créer le graphique avec la matrice en tant que données
 image(1:nrow(coral), 1:ncol(coral), t(coral), col = plasma(40),
-      xlab = "effort de pêche", ylab = "R", main = "Graphique de C finale",axes=F);axis(side = 1, at = 1:ncol(coral), labels = col_names);axis(side = 2, at = 1:nrow(coral), labels = row_names)
+      xlab = "effort de pêche", ylab = "R initiale", main = "Graphique de C finale selon la Rugosité initiale et l'effort de pêche après 30 ans",axes=F);axis(side = 1, at = 1:ncol(coral), labels = col_names);axis(side = 2, at = 1:nrow(coral), labels = row_names)
 ```
 
 Dans la figure 2, affichage des graphiques des valeurs d'équilibre après 30 ans de la couverture corallienne en fonction de l'effort de pêche par rapport au taux de croissance des poissons-perroquets (f) pour différentes valeurs de rugosité (R) afin de démontrer les implications de l'effort de pêche sur la couverture des récifs coralliens.
